# softmax-universe

./: AGENTS.md  README.md  pyproject.toml
src/ontology/: cli.py  db.py  server.py  ui.html
tests/: test_ontology.py
