[project]
name = "softmax-universe"
version = "0.1.0"
description = "Game service ontology and admin dashboard"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ontology = "ontology.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ontology = ["*.html"]
